<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.receive.ReceiveFragment">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/receive_files"
        app:titleTextColor="?colorOnSurface" />

    <!-- Scanning Animation Container -->
    <FrameLayout
        android:id="@+id/scan_container"
        android:layout_width="@dimen/scan_animation_size"
        android:layout_height="@dimen/scan_animation_size"
        app:layout_constraintBottom_toTopOf="@id/text_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed">

        <!-- Pulse Ring 1 -->
        <View
            android:id="@+id/pulse_ring_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.15"
            android:background="@drawable/bg_scan_pulse" />

        <!-- Pulse Ring 2 -->
        <View
            android:id="@+id/pulse_ring_2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:alpha="0.25"
            android:background="@drawable/bg_scan_pulse" />

        <!-- Center Icon -->
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_gradient"
            android:elevation="4dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bluetooth"
                app:tint="@color/white"
                android:contentDescription="@string/receive_files" />
        </FrameLayout>
    </FrameLayout>

    <!-- Status Text -->
    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/waiting_for_connection"
        android:textAppearance="@style/TextAppearance.SwiftShare.Title"
        android:textSize="@dimen/text_subtitle"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_container" />

    <!-- Description Text -->
    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xxl"
        android:layout_marginTop="@dimen/spacing_sm"
        android:gravity="center"
        android:text="@string/receive_description"
        android:textAppearance="@style/TextAppearance.SwiftShare.Caption"
        app:layout_constraintBottom_toTopOf="@id/btn_discoverable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_status" />

    <!-- Make Discoverable Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_discoverable"
        style="@style/Widget.SwiftShare.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/padding_screen"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:text="@string/make_discoverable"
        app:icon="@drawable/ic_bluetooth"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
